--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,14 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.google.javascript</groupId>
+			<artifactId>closure-compiler</artifactId>
+			<version>v20160208</version>
+		</dependency>
+		<dependency>
 			<groupId>com.yahoo.platform.yui</groupId>
 			<artifactId>yuicompressor</artifactId>
-			<version>2.4.7</version>
+			<version>2.4.8</version>
 		</dependency>
 		<dependency>
 			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
